@@ -14,12 +14,14 @@ export(loadDataADaM)
 export(subjectProfileCombine)
 export(subjectProfileEventPlot)
 export(subjectProfileIntervalPlot)
+export(subjectProfileSpaghettiPlot)
 export(subjectProfileTextPlot)
 export(subjectProfileTheme)
 import(ggplot2)
 importFrom(cowplot,draw_label)
 importFrom(cowplot,ggdraw)
 importFrom(cowplot,plot_grid)
+importFrom(dplyr,n_distinct)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
